# sql-replica

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  context.h  functions.cpp  functions.h  objects.cpp  objects.h  routines.cpp  routines.h  sanitize_rules.json  schema.cpp  schema.h  sqlr.cpp  sqlr.h  tables.cpp  tables.h  users.cpp  users.h  views.cpp  views.h
test/: CMakeLists.txt  empty-apply.sql  empty.cpp  empty.sql  functions-apply.sql  functions.cpp  functions.sql  membership.cpp  mysql.cpp  procedure-mode.cpp  procedures-apply.sql  procedures.cpp  procedures.sql  sql_sync.cpp  table.cpp  table.sql  test_util.h  validation.cpp
test/mysql/1/: 1.json  1.sql  2.json  2.sql  3.json  3.sql
test/mysql/2/: 1.json  1.sql  2.json  2.sql
test/mysql/3/: 1.json  1.sql  2.json  2.sql
test/mysql/4/: 1.json  1.sql  2.json  2.sql  dry-run-report
test/mysql/5/: 1.json  1.sql  2.json  2.sql  3.json  3.sql
test/mysql/6/: 1.json  1.sql  2.json  2.sql  3.json  3.sql
test/mysql/7/: 1.json  1.sql  2.json  2.sql
test/mysql/8/: 1.json  1.sql  2.json  2.sql
test/sql-sync/: routines.json  schema.json  sql.sql  tables.json  users.json  views.json
